domain: fixed domain alignment

--- a/css/style.css
+++ b/css/style.css
@@ -596,7 +596,8 @@ section {
 .why-us .box {
 	padding: 50px 30px;
 	box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
-	transition: all ease-in-out 0.3s;
+	/* transition: all ease-in-out 0.1s; */
+	transition: all 0.3s ease-out 0s !important;
 }
 
 .why-us .box span {
